feat: :sparkles: mejoras en el pricing

--- a/src/components/sections/Pricing.astro
+++ b/src/components/sections/Pricing.astro
@@ -1,4 +1,3 @@
-
 ---
 import Card from '../ui/Card.astro';
 import Button from '../ui/Button.astro';
@@ -6,29 +5,23 @@ import Button from '../ui/Button.astro';
 const benefits = [
  {
    highlight: true,
-   text: "Certificado Profesional en IA Generativa"
+   text: "Certificado de Participación"
  },
  {
    highlight: true,
-   text: "Acceso a herramientas empresariales de IA valoradas en $1000+"
+   text: "Ahorro de Tiempo y Esfuerzo"
  },
  {
-   text: "90 días de formación intensiva"
+   text: "4 horas de formación intensiva"
  },
  {
-   text: "15+ proyectos prácticos con código"
+   text: "Acceso a Herramientas Prácticas:"
  },
  {
-   text: "Mentoría personalizada semanal"
+   text: "Ejemplos Reales y Aplicados"
  },
  {
    text: "Comunidad privada de alumnos"
- },
- {
-   text: "Recursos y templates empresariales"
- },
- {
-   text: "Bolsa de trabajo exclusiva"
  }
 ];
 ---
@@ -42,9 +35,9 @@ const benefits = [
         </span>
         
         <div class="flex flex-col sm:flex-row justify-center items-center sm:items-baseline gap-2 sm:gap-4 mb-8">
-          <span class="text-4xl sm:text-6xl font-bold order-2 sm:order-1">$0</span>
-          <span class="text-lg sm:text-xl text-white/40 order-1 sm:order-2">
-            mensual
+          <span class="text-4xl sm:text-6xl font-bold order-2 sm:order-1">$97000</span>
+          <span class="text-lg sm:text-xl text-white/40 line-through order-1 sm:order-2">
+           $150.000
           </span>
         </div>
   
