feat: :sparkles: "listo el pollo"

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -7,6 +7,7 @@ Mi consulta es sobre:
 - Precio de lanzamiento: $97.000 
 - Duración: 4 horas
 - Modalidad presencial
+-(completa tu resgistro usando tu cedula)
 
 ¿Me podrías indicar los pasos para inscribirme?`);
 
