feat: :sparkles: add hero and pricing sections

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -21,9 +21,9 @@ const whatsappLink = `https://wa.me/573012463004?text=${whatsappText}`;
     <Image 
       src={logo}
       alt="Hero Image" 
-      class="mx-auto w-1/4 h-auto"
-      width={200}
-      height={150}
+      class="mx-auto h-auto"
+      width={160}
+      height={160}
     />
    <div class="text-center">
      <span class="inline-block mb-8">
