--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,3 @@
-
 ---
 interface Props {
   title: string;
@@ -19,9 +18,44 @@ const { title, description = "Master en IA Generativa - Aprende a construir el f
   </head>
   <body class="bg-black text-white">
     <slot />
+    <!-- Botón flotante de WhatsApp -->
+    <div class="floating-whatsapp">
+      <a href="https://wa.me/+573012463004" target="_blank" rel="noopener noreferrer">
+        <img src="../src/assets/whatsapp-icon.png" alt="WhatsApp" />
+      </a>
+    </div>
   </body>
 </html>
 
 <style is:global>
   @import "../styles/global.css";
+
+  .floating-whatsapp {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+  }
+
+  .floating-whatsapp a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: #29a71a;
+    border-radius: 50%;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .floating-whatsapp a:hover {
+    transform: scale(1.1);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .floating-whatsapp img {
+    width: 30px;
+    height: 30px;
+  }
 </style>
