--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const helpMessage = `Hola, quisiera saber mas sobre Curso de inteligencia artifi
     <title>{title}</title>
     <TikTokPixel />
   </head>
-  <body class="bg-black text-white">
+  <body class="bg-[#151933] text-white">
     <slot />
     <!-- Botón flotante de WhatsApp -->
     <div class="floating-whatsapp">
