refactor: Contenido Features actualizado, estilo añadido al componente Card

--- a/src/components/sections/Features.astro
+++ b/src/components/sections/Features.astro
@@ -1,19 +1,32 @@
 ---
-import { features } from '../../data/features';
-import Card from '../ui/Card.astro';
+import { features } from "../../data/features";
+import Card from "../ui/Card.astro";
 ---
 
 <section id="aprendizaje" class="py-20 bg-[#151933]">
   <div class="container mx-auto px-4">
     <h2 class="text-3xl font-bold text-center mb-16">Lo que aprenderás</h2>
-    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-      {features.map(feature => (
-        <Card 
-          title={feature.title}
-          description={feature.description}
-          weeks={feature.weeks}
-        />
-      ))}
+    <div class="cards grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+      {
+        features.map((feature) => (
+          <Card
+            title={feature.title}
+            description={feature.description}
+            weeks={feature.weeks}
+          />
+        ))
+      }
     </div>
   </div>
 </section>
+
+<script is:inline>
+  document.querySelector(".cards").addEventListener("pointermove", (ev) => {
+    const target = ev.target.closest("div");
+    if (target) {
+      const rect = target.getBoundingClientRect();
+      target.style.setProperty("--x", ev.clientX - rect.left);
+      target.style.setProperty("--y", ev.clientY - rect.top);
+    }
+  });
+</script>
