--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,7 +51,7 @@
     @layer utilities {
       .noise {
         background-image: url("http://assets.iceable.com/img/noise-transparent.png");
-        @apply bg-repeat;
+        @apply bg-repeat bg-[#151933];
       }
     }
 }
