Cambio del logo a campuslands

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -20,7 +20,7 @@ const whatsappLink = `https://wa.me/573012463004?text=${whatsappText}`;
  <div class="container mx-auto px-4 py-4 flex justify-between items-center">
   <a href="/" class="text-xl font-bold bg-gradient-to-r from-purple-400 to-blue-400 text-transparent bg-clip-text">
     <Image 
-      src="https://camper-stories.s3.us-east-2.amazonaws.com/assets/Campus.png"
+      src="https://camper-stories.s3.us-east-2.amazonaws.com/assets/campuslands.png"
       alt="Hero Image" 
       class="mx-auto h-auto pt-1"
       width={160}
